# libmakise

./: .gitignore  README.md  Rakefile  benchmark.yml  eval_gep.sh  example.yml  gep_cmp.sh  makise.state  meson.build  ones.yml  state.ksy  wtf.txt
armgp/: main.c
ascii/: ascii.c
example/: example.c
examples/: ascii.c  ones.c  valid.c
gep/: fenotype.c  main.c  tree.c
include/: crossover.h  defaults.h  errors.h  ga.h  genotype.h  makise.h  mutation.h  parameters.h
include/gep/: fenotype.h  functions.h  tree.h
include/makise/: crossover.h  defaults.h  ga.h  genotype.h  logging.h  mutation.h  parameters.h  serialization.h  signals.h
libmakise/: .#ga.c  .#serialization.c  crossover.c  ga.c  genotype.c  logging.c  main.c  mutation.c  parameters.c  serialization.c  signals.c
src/: .#genotype.c  crossover.c  ga.c  genotype.c  main.c  mutation.c  parameters.c
valid/: valid.c
